<resources>
    <string name="app_name">Click4Pandit</string>
    <string name="firstName">First Name*</string>
    <string name="lastName">Last Name*</string>
    <string name="mobileNo">Mobile No*</string>
    <string name="email">Email*</string>
    <string name="password">Password</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="createanaccount">By creating an account,you agree to our</string>
    <string name="termscondition">Terms &amp; conditions</string>
    <string name="privacypolicy">Privacy Policy </string>
    <string name="donothaveaccount">Do not have an account?</string>
    <string name="signup">Sign Up</string>
    <string name="amperson">&amp;</string>
    <string name="login">Login</string>
    <string name="forgetpassword">Forget Password?</string>
    <string name="resetpassword">Enter the email address associated with </string>
    <string name="resetpassword2">your account to reset your password.</string>
    <string name="submit">Submit</string>
    <string name="changepassword">Change Password</string>
    <string name="oldpassword">Old Password</string>
    <string name="newpassword">New Password</string>
    <string name="confirm">Confirm</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="order">Orders</string>
    <string name="settings">Settings</string>
    <string name="signout">Sign Out</string>
    <string name="press_again_exit_app">Press again to exit</string>
    <string name="expericed">Experienced Pandit and Easy</string>
    <string name="accessibility">Accessibility to Puja Samagris</string>
    <string name="andeasy">An Easy and Economic choice for a  </string>
    <string name="divineexperience">Divine Experience </string>
    <string name="choosepuja">Pick your Puja </string>
    <string name="viewpackage">View Packages </string>
    <string name="pickpuja">Experienced Pandits,Reasonable Dakshina </string>
    <string name="economical"> And Multiple Choices</string>
    <string name="samagries">All your Puja Requirements Ranging </string>
    <string name="doorstep">From Pandits To Samagri Fulfilled</string>
    <string name="choosepackage">Pick your Package</string>
    <string name="standardpackage">Standard Package</string>
    <string name="economypackage">Economy Package</string>
    <string name="premiumpackage">Premium Package</string>
    <string name="rupee">20A8</string>
    <string name="inclusive">Inclusive of Samgri + 1 Pandit</string>
    <string name="nopandit">No of Pandits:1</string>
    <string name="procedure">Procedure</string>
    <string name="pujasamgries">Puja Samagries</string>
    <string name="yajaman">Yajaman</string>
    <string name="requireheaven">Do you require heaven?</string>
    <string name="Rs">\u20B9 2700</string>
    <string name="Rs1">\u20B9 4100</string>
    <string name="Rs2">\u20B9 3100</string>
    <string name="Rs3">\u20B9 3400</string>
    <string name="panditsavailable">Book your Puja Now!!! </string>
    <string name="convenience"> From the Comfort Of Your Home</string>
    <string name="transparency">You are Only One Click Away From</string>
    <string name="hasslefree">A Divine experience</string>
    <string name="bookpuja">Book your Puja</string>
    <string name="location">Location</string>
    <string name="locationn">Location:</string>
    <string name="language">Language</string>
    <string name="date">March 10,2021</string>
    <string name="time">10:30 PM</string>
    <string name="ordersummray">Order Summary</string>
    <string name="pujaname">Puja Name:</string>
    <string name="amount">Amount</string>
    <string name="ganeshpuja">Ganesh Puja</string>
    <string name="packagename">Package:</string>
    <string name="dakshina">Dakshine</string>
    <string name="included">Included</string>
    <string name="allpujasamagries">All Puja Samagri:</string>
    <string name="packagedetails">(1 Pandit + All Puja Samagries)</string>
    <string name="havan">Havan:</string>
    <string name="priestpreference">Priest Preference:</string>
    <string name="hindi">Hindi</string>
    <string name="datetime">Date &amp; Time: </string>
    <string name="datetimevalue">16th,May 21 at 3:30 PM</string>
    <string name="subtotal">Sub Total</string>
    <string name="cgst">CGST 9%</string>
    <string name="sgst">SGST 9%</string>
    <string name="total">Total</string>
    <string name="subtotalvalue">\u20B9 4,000.00</string>
    <string name="cgstvalue">\u20B9 360.00</string>
    <string name="sgstvalue">\u20B9 360.00</string>
    <string name="totalvalue">\u20B9 4,720.00</string>
    <string name="billingdetails">Billing Details</string>
    <string name="alternatemobileno">Alternate Mobile Number</string>
    <string name="address">Address</string>
    <string name="state">State*</string>
    <string name="city">City*</string>
    <string name="pincode">Pin Code*</string>
    <string name="adddifferentloc">Different Puja Location</string>
    <string name="proceedtopay">Proceed to Pay</string>
    <string name="additionalinfo">Additional Information</string>
    <string name="differentpujalocation">Different Puja Location</string>
    <string name="save">Save</string>
    <string name="howwework">How We work</string>
    <string name="termsofuse">Terms of Use</string>
    <string name="faq">FAQ</string>
    <string name="cancellansandrefund">Cancellation and Refund</string>
    <string name="contactus">Contact Us</string>
    <string name="name">Name</string>
    <string name="editprofile">Edit Profile</string>
    <string name="orderno">Order No:</string>
    <string name="paid">Paid</string>
    <string name="total1">TOTAL \u20B9 4,000.00</string>
    <string name="orderdetails">Order Details</string>
    <string name="panditname">Pandit Vishnu Mohan</string>
    <string name="paidamount">The Amount is Paid</string>
    <string name="thankyou">Thank you using our application! </string>
    <string name="please_wait">Please Wait</string>
    <string name="nointernet">No Internet</string>
    <string name="nointernetdetails">We are unable to connect Internet,Please stay with us</string>
    <string name="validation_error">Validation Error</string>
    <string name="please_enter_valid_phone_number">Please enter Valid \n Phone Number</string>
    <string name="rupeesign">\u20B9</string>
    <string name="success">Success</string>
    <string name="editprofilesucess">Edit Profile Successfully done</string>
    <string name="register">You have successsfully registered with us...</string>
    <string name="typesofpuja">Types Of Puja</string>
    <string name="categories">Categories</string>
    <string name="yourpuja">Your Puja, Just Got Easy!</string>
    <string name="pickpujagot">Pick The Perfect Puja And Pandit </string>
    <string name="foryourself">For Yourselft In Less Than A Minute</string>
    <string name="ordergenerate">Your Order has been generated Successfully</string>
    <string name="billgenerate">Your Bill has been generated Successfully</string>
    <string name="checkmail">Reset password link has been sent to registered email address</string>
    <string name="forgetsuccess">Forget Password Successfully done.</string>
    <string name="changepasswordgenerate">Change Password Successfully done.</string>
    <string name="wrongemailid">Wrong EmailId.</string>
    <string name="refundpolicy">Refund Policy</string>
    <string name="bhumipuja">Bhoomi Puja</string>
    <string name="requirements">Requirements</string>
    <string name="contactusoon">Successfully submited your requirements, we will contact with you soon</string>
    <string name="cashfreetokengenerate">CashFree Token generated succefully...</string>
    <string name="paymentsuccess">Payment Successfully\n Received</string>
    <string name="select">Select</string>
    <string name="helpsupport">Help  &amp; Support </string>
    <string name="account">Account</string>
    <string name="addressbook">Address Book</string>
    <string name="savechanges">Save Changes</string>
    <string name="removechanges">Remove Changes</string>
    <string name="updatechanges">Update Changes</string>
    <string name="profilesave">Your Profile Successfully Changed</string>
    <string name="accountinfo">Your Information</string>
    <string name="yourselection">Your Selection</string>
    <string name="panditpreference">Pandit Preference:</string>
    <string name="addnewaddress">Add New Address</string>
    <string name="saveaddress">Save Address</string>
    <string name="address1">Address1*</string>
    <string name="address2">Address2</string>
    <string name="address3">Address3</string>
    <string name="edit">Edit</string>
    <string name="remove">Remove</string>
    <string name="addressautumn">Autumn Tech Creation Pvt ltd</string>
    <string name="addressautumn1">91/A/1,ParkStreet Avani Signature,</string>
    <string name="addressautumn2">Kolkata -700016</string>
    <string name="datetimeoffice">Mon-Sat,10:00 am-8:00 pm</string>
    <string name="dialoffice">1800 891 9016/ + 91 76050 106 56</string>
    <string name="contactoffice">contact@click4pandit.com</string>
    <string name="imageupload">Image Uploaded Successfully</string>
    <string name="orderid">Order Id</string>
    <string name="orderamount">Order Amount</string>
    <string name="referenceid">Reference ID</string>
    <string name="transactionstatus">Transaction Status</string>
    <string name="paymentmode">Payment Mode</string>
    <string name="message">Message</string>
    <string name="Transactiontime">Transaction Time</string>
    <string name="thankyoupayment">Thank You! Payment done is subject</string>
    <string name="torealization">to Realization</string>
    <string name="backtohome">Back to Home</string>
    <string name="phoneno">Phone Number</string>
    <string name="thankcontactus">Thank You for Contact Us</string>
    <string name="failed">Failed</string>
    <string name="checkin">Check In</string>
    <string name="checkout">Check Out</string>
    <string name="nodata"> No Data Found</string>
    <string name="nodatadetails">Sorry,We Can\'t find any data for you</string>
    <string name="network_error"> Network Error</string>
    <string name="shop">Shop</string>
    <string name="pujaitemkit">Puja Item Kit</string>
    <string name="shopnow">Shop Now</string>
    <string name="pujabox">Puja Box</string>
    <string name="pujabrass">Puja Brass Item</string>
    <string name="addtocart">Add to Cart</string>
    <string name="buynow">Buy Now</string>
    <string name="quantity">Quantity</string>
    <string name="checkdelivery">Check Delivery Pincode</string>
    <string name="productdimension">Product Dimension</string>
    <string name="productmaterial">Product Material</string>
     <string name="productdesc">Product Description</string>
    <string name="proceed">Proceed</string>
    <string name="wishlist">WishList</string>
    <string name="started">Started</string>
    <string name="cancel">Cancel</string>
    <string name="team"><br>Team Click4Pandit is happy to serve you! </br><br>Our professionals are willing to provide you with</br>
        <br>timely assistance.Please register your query issue</br><br> below and our team will get back to you within 24 hoours</br></string>
    <string name="please_enter_address">Please enter \n Address</string>
    <string name="please_enter_confirmpasswprd">Please Enter Confirm Password</string>
    <string name="please_enter_state">Please enter \n State</string>
    <string name="please_enter_city">Please enter \n City</string>
    <string name="doesnotmatch">Your password does not match \n with confirm password</string>
    <string name="emtycartmsg">Your Cart is Empty.</string>
    <string name="findsamagries">Keep shopping  to find a Samagries</string>
    <string name="keepshopping">Keep Shopping</string>
</resources>