<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group
        android:id="@+id/grp1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/menu_home"
            android:icon="@drawable/home"
            android:title="@string/home" />
    </group>
    <group
        android:id="@+id/grp2"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_profile"
            android:icon="@drawable/user"
            android:title="@string/profile" />
    </group>
    <group
        android:id="@+id/grp3"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_order"
            android:icon="@drawable/orders"
            android:title="@string/order" />
    </group>
    <group
        android:id="@+id/grp4"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings" />
    </group>
    <group
        android:id="@+id/grp5"
        android:checkableBehavior="single">

        <item
            android:id="@+id/menu_signout"
            android:icon="@drawable/signout"
            android:title="@string/signout" />
    </group>
</menu>