<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:shimmer="http://schemas.android.com/apk/res-auto"
    xmlns:android.support.design="http://schemas.android.com/apk/res-auto"
    >

    <data>

        <variable
            name="OrderSummeryViewModel"
            type="com.autumntechcreation.click4panditcustomer.ui.ordersummary.OrderSummaryViewModel" />
    </data>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        android:fitsSystemWindows="true"
        >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/whiteColor"
        android:paddingBottom="@dimen/dimen_10dp"
        android:orientation="vertical">
    <TextView
        android:id="@+id/tvOrderSummary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/blackColor"
        android:text="@string/ordersummray"
        android:textSize="@dimen/font_18sp"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
      >

    </TextView>

    <View
        android:id="@+id/viewOrderSummary"
        android:layout_width="@dimen/dimen_120dp"
        android:layout_height="@dimen/dimen_2dp"
        android:layout_marginTop="@dimen/dimen_5dp"
        android:background="#D1453E"
        android.support.design:layout_constraintLeft_toLeftOf="parent"
        android.support.design:layout_constraintRight_toRightOf="parent"
        android.support.design:layout_constraintTop_toBottomOf="@+id/tvOrderSummary"></View>

    <TextView
        android:id="@+id/tvPujaName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/pujaname"
        style="@style/Style_TextView_FontBold"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:layout_marginLeft="@dimen/dimen_10dp"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/font_14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/viewOrderSummary"></TextView>
        <TextView
            android:id="@+id/tvAmount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/amount"
            style="@style/Style_TextView_FontBold"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_14sp"
            android:layout_marginRight="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_30dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewOrderSummary"></TextView>
        <TextView
            android:id="@+id/tvPujaNameValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Style_TextView_FontBold"
            android:text="@string/ganeshpuja"
           android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/buttonColor"
            android:textSize="@dimen/font_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPujaName"></TextView>
        <View
            android:id="@+id/viewPuja"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/colorBadge"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPujaNameValue"
            ></View>
        <TextView
            android:id="@+id/tvPackage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packagename"
            style="@style/Style_TextView_FontBold"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPuja"></TextView>
        <TextView
            android:id="@+id/tvPackageValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/standardpackage"
            style="@style/Style_TextView_FontRegular"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toRightOf="@+id/tvPackage"
            app:layout_constraintTop_toBottomOf="@+id/viewPuja"></TextView>
        <TextView
            android:id="@+id/tvPanditDetails"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/packagedetails"
            style="@style/Style_TextView_FontRegular"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPackageValue"></TextView>
        <TextView
            android:id="@+id/tvDakshina"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/procedure"
            style="@style/Style_TextView_FontBold"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPanditDetails"></TextView>
        <TextView
            android:id="@+id/tvDakshinaValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dakshina"
            android:maxLines="5"
            android:ellipsize="end"
            android:layout_marginLeft="@dimen/dimen_10dp"
            style="@style/Style_TextView_FontRegular"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDakshina"></TextView>
        <TextView
            android:id="@+id/tvAllPujaSamagries"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Style_TextView_FontBold"
            android:text="@string/allpujasamagries"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDakshina"></TextView>
        <TextView
            android:id="@+id/tvAllPujaSamagriesValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dakshina"
            android:maxLines="5"
            android:ellipsize="end"
            style="@style/Style_TextView_FontRegular"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_5dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAllPujaSamagries"></TextView>
        <TextView
            android:id="@+id/tvHavan"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/havan"
            style="@style/Style_TextView_FontBold"
            android:layout_marginTop="@dimen/dimen_40dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAllPujaSamagriesValue"></TextView>

        <TextView
            android:id="@+id/tvHavanValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/included"
            android:maxLines="5"
            android:ellipsize="end"
            style="@style/Style_TextView_FontRegular"
            android:layout_marginTop="@dimen/dimen_5dp"
           android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
           app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHavan"></TextView>

        <TextView
            android:id="@+id/tvPriestPreference"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/priestpreference"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_40dp"
            style="@style/Style_TextView_FontBold"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvHavanValue"></TextView>
        <TextView
            android:id="@+id/tvPriestPreferenceValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hindi"
            android:layout_marginTop="@dimen/dimen_5dp"
            style="@style/Style_TextView_FontRegular"
           android:layout_marginLeft="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_14sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriestPreference"></TextView>
        <View
            android:id="@+id/viewPreference"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/blackColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvPriestPreferenceValue"
            ></View>
        <TextView
            android:id="@+id/tvDateTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/Style_TextView_FontBold"
            android:text="@string/datetime"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewPreference"></TextView>
        <TextView
            android:id="@+id/tvDateTimeValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/datetimevalue"
            style="@style/Style_TextView_FontRegular"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTime"></TextView>
        <View
            android:id="@+id/viewDateTimeValue"
            android:layout_width="@dimen/dimen_200dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginLeft="@dimen/dimen_10dp"
            android:layout_marginTop="@dimen/dimen_10dp"
            android:background="@color/blackColor"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDateTimeValue"
            ></View>
        <TextView
            android:id="@+id/tvSubTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotal"
            style="@style/Style_TextView_FontBold"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDateTimeValue"></TextView>
        <TextView
            android:id="@+id/tvSubTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/subtotalvalue"
            style="@style/Style_TextView_FontBold"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
          app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/viewDateTimeValue"></TextView>
        <TextView
            android:id="@+id/tvCgst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgst"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            style="@style/Style_TextView_FontBold"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTotal"></TextView>
        <TextView
            android:id="@+id/tvCgstValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cgstvalue"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            style="@style/Style_TextView_FontBold"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubTotalValue"></TextView>
        <TextView
            android:id="@+id/tvSgst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sgst"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            style="@style/Style_TextView_FontBold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCgst"></TextView>
        <TextView
            android:id="@+id/tvSgstValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sgstvalue"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            style="@style/Style_TextView_FontBold"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvCgstValue"></TextView>
        <TextView
            android:id="@+id/tvTotal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/total"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            style="@style/Style_TextView_FontBold"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSgst"></TextView>
        <TextView
            android:id="@+id/tvTotalValue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/totalvalue"
            style="@style/Style_TextView_FontBold"
            android:layout_margin="@dimen/dimen_10dp"
            android:textColor="@color/blackColor"
            android:textSize="@dimen/font_12sp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSgstValue"></TextView>
        <TextView
            android:id="@+id/tvConfirm"
            android:layout_width="@dimen/dimen_150dp"
            android:layout_height="@dimen/dimen_30dp"
            android:background="@drawable/round_yellow_corner"
            android:gravity="center"
            style="@style/Style_TextView_FontBold"
            android:textSize="@dimen/font_12sp"
            android:textColor="@color/blackColor"
            android:onClick="@{(v) -> OrderSummeryViewModel.onClickConfirmOrder(v)}"
            android:text="@string/confirm"
            android:layout_marginTop="@dimen/dimen_20dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTotalValue">
        </TextView>
</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
</layout>