<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/whiteColor"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/imgvwEmptyCart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_cart_red"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"></ImageView>
    <TextView
        android:id="@+id/tvemptycart"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_14sp"
        android:text="@string/emtycartmsg"
        android:textColor="@color/blackColor"
        android:layout_marginTop="@dimen/dimen_10dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgvwEmptyCart"></TextView>
    <TextView
        android:id="@+id/tvFindsamagries"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/font_14sp"
        android:text="@string/findsamagries"
        android:textColor="@color/blackColor"
        android:layout_marginTop="@dimen/dimen_5dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvemptycart"></TextView>
    <TextView
        android:id="@+id/tvKeepshopping"
        android:layout_width="@dimen/dimen_200dp"
        android:layout_height="@dimen/dimen_40dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:background="@drawable/newroundedyellow"
        android:textColor="@color/blackColor"
        android:textSize="@dimen/font_14sp"
        android:layout_marginTop="@dimen/dimen_10dp"
        android:gravity="center"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvFindsamagries"
        android:text="@string/keepshopping"></TextView>
</androidx.constraintlayout.widget.ConstraintLayout>